Added "Auto publish after saving the design".

--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -88,7 +88,8 @@
 					</div>
 				</div>
 			</ui-bind>
-			<ui-component name="input" path="?.download" config="type:checkbox" class="b">@(Download components to the source in compiling)</ui-component>
+			<ui-component name="input" path="?.download" config="type:checkbox" class="b">@(Download components' to the source in compiling)</ui-component>
+			<ui-component name="input" path="?.autopublish" config="type:checkbox">@(Auto publish after saving the design)</ui-component>
 		</ui-plugin>
 		<hr />
 		<div>
