--- a/public/forms/components.html
+++ b/public/forms/components.html
@@ -127,7 +127,7 @@
 
 			var queue = [];
 
-			queue.push(next => refresh('https://cdn.componentator.com/uibuilder/db.json', opt, next));
+			queue.push(next => refresh(common.componentsdb, opt, next));
 
 			// if (enterprise.is)
 			// 	queue.push(next => refresh('https://enterprise.totaljs.com/download/uibuilder/?token=' + enterprise.token, opt, next));
