--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -101,7 +101,7 @@
 				<ui-component name="input" path="?.cssoutput" config="type:multiline;monospace:1;height:100">@(CSS for publishing)</ui-component>
 			</div>
 			<div class="m">
-				<ui-component name="input" path="?.cssrender" config="type:multiline;monospace:1;height:100">@(CSS for rendering)</ui-component>
+				<ui-component name="input" path="?.csspreview" config="type:multiline;monospace:1;height:100">@(CSS for preview)</ui-component>
 			</div>
 		</div>
 	</div>
