--- a/public/forms/components.html
+++ b/public/forms/components.html
@@ -18,7 +18,7 @@
 	.~PATH~ .ui-dark .listing-download .version { color: #777; }
 </style>
 
-<ui-component name="box" path="common.form" config="if:~PATH~;icon:ti ti-download;title:@(Download components);autofocus:true;reload:?/reload;scrollbar:0;width:1200;close:?/close" class="hidden ~PATH~" plugin="~PATH~">
+<ui-component name="box" path="common.form" config="if:~PATH~;icon:ti ti-download;title:@(Import components);autofocus:true;reload:?/reload;scrollbar:0;width:1200;close:?/close" class="hidden ~PATH~" plugin="~PATH~">
 	<nav>
 		<!--
 		<button class="exec" data-exec="?/enterprise"><i class="ti ti-totaljs green"></i>@(Enterprise)</button>
