--- a/public/forms/component.html
+++ b/public/forms/component.html
@@ -17,7 +17,7 @@
 		<hr style="margin-top:10px" />
 		<div class="help">
 			<span class="link exec mr10" data-exec="?/download"><i class="ti ti-download mr5"></i>@(Download)</span>
-			<span class="link exec" data-exec="?/copy"><i class="ti ti-copy mr5"></i>@(Copy to clipboard)</span>
+			<span class="link exec" data-exec="?/copy"><i class="ti ti-copy mr5"></i>@(Export)</span>
 		</div>
 	</div>
 	<nav>
