--- a/public/forms/link.html
+++ b/public/forms/link.html
@@ -9,6 +9,7 @@
 			<hr />
 			<ui-component name="input" path="?.target" config="dirsource:|@(Current tab or Window),_blank|@(New tab or Window);dirplaceholder:@(Search)" class="m">@(Target)</ui-component>
 			<ui-component name="input" path="?.title" config="icon:info-circle" class="m">@(Tooltip)</ui-component>
+			<div class="help"><span class="exec link red" data-exec="?/remove"><i class="ti ti-remove mr5"></i>@(Remove link)</span></div>
 		</div>
 	</div>
 
@@ -29,6 +30,14 @@
 			if (type === 2 && value.length > 12 && (/^(http|https)\:\/\//i).test(value) && exports.model.target !== '_blank')
 				exports.set('target', '_blank');
 		}, true);
+
+		exports.remove = function() {
+			var model = exports.model;
+			var link = model.element;
+			link.replaceWith(link.html());
+			model.callback && model.callback(model);
+			NUL('common.form2');
+		};
 
 		exports.type = function(el) {
 			var r = /^(tel|mailto)\:/;
