--- a/public/forms/paste.html
+++ b/public/forms/paste.html
@@ -28,11 +28,13 @@
 			var instance = model.instance;
 
 			meta.children.id = 'cid' + Date.now().toString(36);
+			meta.children.newbie = true;
 
 			var updateid = function(children) {
 				for (var item of children) {
 					for (var m of item) {
 						m.id = 'cid' + Math.random().toString(36).substring(2).substring(0, 8);
+						m.newbie = true;
 						updateid(m.children);
 					}
 				}
@@ -51,7 +53,7 @@
 
 			var done = function() {
 				var containerindex = model.container.attrd('index');
-				app.add(instance.id, containerindex, meta.children);
+				app.add(instance.id, containerindex, meta.children, null, null, null, true);
 				app.clean();
 				hide();
 			};
