Added support for `editor.compile {Boolean}` option.

--- a/public/forms/settings.html
+++ b/public/forms/settings.html
@@ -59,7 +59,9 @@
 					<ui-component name="input" path="?.download" config="type:checkbox" class="b">@(Download components' to the source in compiling)</ui-component>
 				</ui-bind>
 				<ui-component name="input" path="?.local" config="type:checkbox">@(Use local components)</ui-component>
-				<ui-component name="input" path="?.autopublish" config="type:checkbox">@(Auto publish after saving the design)</ui-component>
+				<ui-bind path="?.compile" config="show:value !== false" class="block">
+					<ui-component name="input" path="?.autopublish" config="type:checkbox">@(Auto publish after saving the design)</ui-component>
+				</ui-bind>
 			</div>
 			<div class="padding bg-smoke m">
 				<div>
