--- a/public/forms/link.html
+++ b/public/forms/link.html
@@ -9,7 +9,9 @@
 			<hr />
 			<ui-component name="input" path="?.target" config="dirsource:|@(Current tab or Window),_blank|@(New tab or Window);dirplaceholder:@(Search)" class="m">@(Target)</ui-component>
 			<ui-component name="input" path="?.title" config="icon:info-circle" class="m">@(Tooltip)</ui-component>
-			<div class="help"><span class="exec link red" data-exec="?/remove"><i class="ti ti-remove mr5"></i>@(Remove link)</span></div>
+			<ui-bind path="?.noremove" class="block" config="hide">
+				<div class="help"><span class="exec link red" data-exec="?/remove"><i class="ti ti-remove mr5"></i>@(Remove link)</span></div>
+			</ui-bind>
 		</div>
 	</div>
 
