Fixed unloading schema.

--- a/public/forms/schema.html
+++ b/public/forms/schema.html
@@ -24,6 +24,9 @@
 			setTimeout(function() {
 				var schema = PARSE(model.body);
 				if (schema) {
+					// unload all apps
+					for (let key in UIBuilder.apps)
+						UIBuilder.apps[key].remove();
 					UIBuilder.data = schema;
 					uibuilder_redraw();
 				} else
